# whistbook

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile  merge_accounts.sql  package.json  package2.json  pnpm-lock.yaml  tailwind.config.cjs  webpack.config.cjs
js/: qrscanner.js
logo/: justfile  logo.typ
migrations/: 0001_init.sql  0002_ratings.sql  setup.surql
public/: manifest.json
public/css/: main.css
public/src/: 175.bundle.js  qr.bundle.js
src/: auth.rs  config.rs  db.rs  embed.rs  error.rs  lib.rs  main.rs  rating.rs  routes.rs  telegram.rs  template.rs  whist.rs
styles/: tailwind.css
templates/: alert.html  chart.html  containered.html  deal_form.html  game.html  game_full.html  game_settings.html  game_settings_full.html  games.html  games_full.html  index.html  leaderboard.html  leaderboard_full.html  login.html  login_actions.html  main.html  main_menu.html  new_game.html  new_game_full.html  player_input.html  points.html  scores.html  success.html  svg.html
